--- a/2024-02-12-Objektai-DOM/uzduotys/task2-2048.html
+++ b/2024-02-12-Objektai-DOM/uzduotys/task2-2048.html
@@ -6,16 +6,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="task2-2048.js" defer></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">;
+  <style>
+    body {
+      font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
+      ;
+
+    }
+
+    .box {
+      width: 700px;
+      height: 700px;
+      margin: 0 auto;
+      background-color: #bbad9f;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      padding: 20px;
+    }
+
+    .box div {
+      width: 150px;
+      height: 150px;
+      background-color: #cdc1b4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 48px;
+      font-weight: 600;
+      color: ;
+    }
+
+    /* button {
+     
+    } */
+  </style>
 </head>
 
 <body>
-  <div class="container">
+  <div class="box"></div>
 
-
-
-
+  <div class="text-center my-5">
+    <div class="first-result"></div>
+    <button class="btn btn-primary btn-large first-example">Naujas žaidimas</button>
   </div>
-
 </body>
 
 </html>
