2024-02-14_events_judantis-elementas

--- a/2024-02-13_events/events.html
+++ b/2024-02-13_events/events.html
@@ -52,7 +52,8 @@
 
 
       // atvaizduojame pakeitima
-      document.querySelector('.result').innerHTML = 'Mygtukas paspaustas ${kiekis} kartu';
+      // document.querySelector('.result').innerHTML = 'Mygtukas paspaustas ${kiekis} kartu';
+      document.querySelector('.result').innerHTML = `${raundas} Raundą laimėjo: ${zaidejas}, surinkęs ${kiekis} taškus`;
     });
 
 
