--- a/2024-02-13_events/uzduotys/task-4.html
+++ b/2024-02-13_events/uzduotys/task-4.html
@@ -50,7 +50,7 @@
 
 </body>
 
-</html> --> -->
+</html> -->
 
 
 
@@ -60,9 +60,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>6 uzduotys</title>
+  <title></title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="sixthtask.js" defer></script>
+  <script src="task-4.js" defer></script>
   <style>
     .loto {
       display: flex;
