2024-02-16_events_judantis-elementas_game'as

--- a/2024-02-14/uzduotis/game-of-games.html
+++ b/2024-02-14/uzduotis/game-of-games.html
@@ -64,6 +64,11 @@
       right: 10px;
       font-size: 30px;
     }
+
+    .container {
+      display: flex;
+      gap: 30px;
+    }
   </style>
 </head>
 
@@ -75,14 +80,17 @@
       <button>Pradėti</button>
     </div>
   </div> -->
-
-  <div class="game">
-    <div class="box">
+  <div class="container">
+    <div class="result">
+      <h3>Rezultatai</h3>
+      <!-- <p>Zaidima laimejo</p> -->
     </div>
-    <div class="time"></div>
-  </div>
-  <div><strong>Rezultatas</strong>
-    <div class="result"></div>
+
+    <div class="game">
+      <div class="box">
+      </div>
+      <div class="time"></div>
+    </div>
   </div>
 
 
