--- a/2024-02-07_funkcijos2/arrow-funkcijos2-mano.html
+++ b/2024-02-07_funkcijos2/arrow-funkcijos2-mano.html
@@ -65,7 +65,7 @@
     // forEach metodas nieko negrazina, neturi return
 
     // mes galime isvardinti parametrus tik eiles tvarka. galime tik viena parametra rasyti, jei kiti nereikalingi. jei tik indeksas reikalingas - butinai turime ivardinti ir pirmoj pozicijoj reiksme
-    // eiles tvarka: element(reiksme), indekx, array(masyvas)
+    // eiles tvarka: element(reiksme), index, array(masyvas)
 
     masyvas.forEach(function (reiksme, indeksas, masyvas) {
       if (reiksme > 10) {
