--- a/2024-02-12-Objektai-DOM/DOM.html
+++ b/2024-02-12-Objektai-DOM/DOM.html
@@ -45,22 +45,23 @@
       console.log(document);
 
       //Medis
-      //Bazinis DOM pavyzdys
+      // Bazinis DOM pavyzdys
       // const dom = {
-      //   html: {
-      //     lang: "en",
-      //     head: {
-      //       meta: {
-      //         charse,
-      //         title: {
-      //           value: "DOM"
+      //     html: {
+      //         lang: "en",
+      //         head: {
+      //             meta: {
+      //                 charset: "UTF-8"
+      //             },
+      //             title: {
+      //                 value: "DOM"
+      //             }
+      //         },
+      //         body: {
+      //             value: ""
       //         }
-      //       },
-      //       body: {
-      //         value: ""
-      //       }
       //     }
-      //   }
+      // }
 
 
       // DOKUMENTO PAVADINIMO PRISKYRIMAS
@@ -106,7 +107,7 @@
       // document.querySelector('div.container').innerHTML = '<h1>Hello World</h1>';
 
 
-      // JEI RASAU += TAI PRIDEDU, TURIO PAPILDYMAS
+      // JEI RASAU += TAI PRIDEDU, TURINIOO PAPILDYMAS
       document.querySelector('div.container').innerHTML += '<h1>Hello World</h1>';
 
       const words = ['Titulinis', 'Apie mus', 'Kontaktai', 'Istorija', 'Nuorodos']
