--- a/2024-02-12-Objektai-DOM/Viliaus medziaga/objektai.html
+++ b/2024-02-12-Objektai-DOM/Viliaus medziaga/objektai.html
@@ -10,9 +10,9 @@
 <body>
     <script>
         // OBJEKTO SUKŪRIMAS
-        // const objektas = {};
+        // const objektas = {}; objekto paskirtis - kad galetume pasiimti reiksmes is ojekto ir su jomis atlikti veiksmus
 
-        // console.log(typeof objektas);
+        // console.log(typeof objektas); objekto duomens tipas yra objektas
 
         // INDEKSO PRISKYRIMAS MASYVE
 
