--- a/2024-02-12-Objektai-DOM/Viliaus medziaga/objektai.html
+++ b/2024-02-12-Objektai-DOM/Viliaus medziaga/objektai.html
@@ -88,7 +88,7 @@
 
         const raktazodis = 'skaicius';
 
-        console.log(naujasObjektas[raktazodis]);
+        console.log(naujasObjektas[raktazodis]); // istraukiam skaiciu 99
 
         // Objekto iteravimas
         // const objektasKonvertuotasIMasyva = Object.entries(naujasObjektas);
@@ -98,8 +98,8 @@
         // }
 
         console.log('REIKŠMĖS PAĖMIMAS NAUDOJANT FOR IN CIKLĄ');
-        for (const key in naujasObjektas) {
-            console.log(naujasObjektas[key]);
+        for (const key in naujasObjektas) { //grazina reiksmes
+            console.log(naujasObjektas[key]);//istraukia visas reiksmes. Galima jas paimti su object.entries
         }
 
         // FOR OF Ciklas neskirtas objektams
