--- a/turinys.html
+++ b/turinys.html
@@ -62,16 +62,19 @@
     <h4>2024-01-15</h4>
     <ul>
       <li>
-        <a href="2024-01-15/uzduotys/figma_contact-form/figma_coontact-form.html" target="_blank">Contact Form</a>
+        <a href="2024-01-15_contact-form_practice/uzduotys/figma_contact-form/figma_coontact-form.html"
+          target="_blank">Contact Form</a>
       </li>
       <li>
-        <a href="2024-01-15/uzduotys/figma_sign-up-form/figma_sign-up-form.html" target="_blank">Sign Up Form</a>
+        <a href="2024-01-15_contact-form_practice/uzduotys/figma_sign-up-form/figma_sign-up-form.html"
+          target="_blank">Sign Up Form</a>
       </li>
     </ul>
     <h4>2024-01-16</h4>
     <ul>
       <li>
-        <a href="2024-01-16/uzduotys/cards/cards.html" target="_blank">Cards</a>
+        <a href="2024-01-16_box-shadow_custom-fonts_dropdown-nav_rem-em_transition_viewport/uzduotys/cards/cards.html"
+          target="_blank">Cards</a>
       </li>
     </ul>
   </div>
