--- a/turinys.html
+++ b/turinys.html
@@ -14,7 +14,7 @@
 <body>
   <div class="conteiner">
 
-    <h1>Completed tasks:</h1>
+    <h1>Turinys</h1>
     <h4>2024-01-02</h4>
     <ul>
       <li><a href="2024-01-02_styles_text-formatting/uzduotys/wikipedia.html" target="_blank">Wikipedia</a></li>
