--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
           target="_blank">Cards</a>
       </li>
     </ul>
+    <h4>2024-01-19</h4>
+    <ul>
+      <li>
+        <a href="2024-01-19_grid-bootstrap/uzduotys/bootstrap-shopping-cart/bootstrap-shopping-cart.html"
+          target="_blank">Shoping Cart / Bootstrap</a>
+      </li>
+    </ul>
   </div>
 </body>
 
