--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
           target="_blank">Shoping Cart / Bootstrap</a>
       </li>
     </ul>
+    <h4>2024-01-22</h4>
+    <ul>
+      <li>
+        <a href="2024-01-22_bootstrap-customizing/grid_RegiM-landing-page/RegiM-landing-page.html"
+          target="_blank">Landing Page / Bootstrap</a>
+      </li>
+    </ul>
   </div>
 </body>
 
