--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
           target="_blank">Landing Page / Bootstrap</a>
       </li>
     </ul>
+    <h4>2024-02-12</h4>
+    <ul>
+      <li>
+        <a href="2024-02-12-Objektai-DOM/uzduotys/task-card.html" target="_blank">Business Card / Object / DOM</a>
+      </li>
+      <li>
+        <a href="2024-02-12-Objektai-DOM/uzduotys/task2-2048.html" target="_blank">Business Card / Object / DOM</a>
+      </li>
+    </ul>
   </div>
 </body>
 
