--- a/index.html
+++ b/index.html
@@ -100,6 +100,49 @@
         <a href="2024-02-12-Objektai-DOM/uzduotys/task2-2048.html" target="_blank">Business Card / Object / DOM</a>
       </li>
     </ul>
+    <h4>2024-02-13</h4>
+    <ul>
+      <li>
+        <a href="2024-02-13_events/uzduotys/task-3.html" target="_blank">Buttons / Events / DOM</a>
+      </li>
+      <li>
+        <a href="2024-02-13_events/uzduotys/task-5.html" target="_blank">Lotto / Events / DOM</a>
+      </li>
+    </ul>
+    <h4>2024-02-14</h4>
+    <ul>
+      <li>
+        <a href="2024-02-14/uzduotis/game-of-games.html" target="_blank">Game of Games / Events/ Movement of the Element
+        </a>
+      </li>
+    </ul>
+    <h4>2024-02-19</h4>
+    <ul>
+      <li>
+        <a href="2024-02-19_Forms/uzduotys/autocomplete.html" target="_blank">Autocomplete Form / Forms</a>
+      </li>
+    </ul>
+    <h4>2024-02-21</h4>
+    <ul>
+      <li>
+        <a href="2024-02-21/uzduotys/timer-mano.html" target="_blank">Timer</a>
+      </li>
+    </ul>
+    <h4>2024-02-22</h4>
+    <ul>
+      <li>
+        <a href="2024-02-22/dom-manipuliacija.html" target="_blank">e-Shop / DOM</a>
+      </li>
+    </ul>
+    <h4>2024-02-23</h4>
+    <ul>
+      <li>
+        <a href="2024-02-23/uzduotys/json/task-1-dog.html" target="_blank">Bring Dog photo / json</a>
+      </li>
+      <li>
+        <a href="2024-02-23/uzduotys/json/task-2-fox.html" target="_blank">Bring Fox photo/ json</a>
+      </li>
+    </ul>
   </div>
 </body>
 
