--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <a href="2024-02-12-Objektai-DOM/uzduotys/task-card.html" target="_blank">Business Card / Object / DOM</a>
       </li>
       <li>
-        <a href="2024-02-12-Objektai-DOM/uzduotys/task2-2048.html" target="_blank">Business Card / Object / DOM</a>
+        <a href="2024-02-12-Objektai-DOM/uzduotys/task2-2048.html" target="_blank">Game 2048 / Object / DOM</a>
       </li>
     </ul>
     <h4>2024-02-13</h4>
