--- a/2024-01-30_ciklai/ciklai/loops.html
+++ b/2024-01-30_ciklai/ciklai/loops.html
@@ -147,7 +147,7 @@
         if (skaicius === 55) {
           console.log(`Rezultatas pasiektas`);
           break; // ciklo nutraukimo komanda
-          //break komanda taip pat nutraukia viso zemiau einancio kodo kompiliacija
+          //break komanda taip pat nutraukia viso zemiau einancio kodo kompiliaciją
         }
         // si eilute jau ignoruojama, nes po break parasyta
         console.log(`gautas skaicius: ` + skaicius);
