--- a/2024-01-17_css-variables_flex_iframe_video/css-variables/css-variables.html
+++ b/2024-01-17_css-variables_flex_iframe_video/css-variables/css-variables.html
@@ -11,7 +11,7 @@
     .root {}
 
     /* kintamieji yra paveldimi, 
-    turi buti nurodyti prire tevinio elemento */
+    turi buti nurodyti prie tėvinio elemento */
     html {
       --kintamojo-pavadinimas: #1f70d9;
       --atitraukimai: 0 20px;
