--- a/2024-01-22_bootstrap-customizing/cards_aiskinimas/cards_aiskinimas.html
+++ b/2024-01-22_bootstrap-customizing/cards_aiskinimas/cards_aiskinimas.html
@@ -77,7 +77,7 @@
       border-radius: 50%;
     }
 
-    /* ent-child sleketoriumi nurodome apskritime vidaus spalvą */
+    /* nth-child sleketoriumi nurodome apskritime vidaus spalvą */
     li:nth-child(1) .image {
       background-color: #ffeeba;
     }
