--- a/2024-01-18_responsive-web-design/responsive-web-design/max-width.html
+++ b/2024-01-18_responsive-web-design/responsive-web-design/max-width.html
@@ -76,7 +76,7 @@
   <div class="container">
     <div class="articles">
 
-      <div class="article"></div>
+      <div class="article">1</div>
       <div class="article">2</div>
       <div class="article">3</div>
       <div class="article">4</div>
