--- a/2024-01-17_css-variables_flex_iframe_video/iframe/iframe.html
+++ b/2024-01-17_css-variables_flex_iframe_video/iframe/iframe.html
@@ -27,9 +27,9 @@
 <body>
 
 </body>
-<!-- inframe yra inline el. -->
+<!-- iframe yra inline el. -->
 <!-- skirtas integruoti failams is kito puslapio -->
-<!-- su frameborder panaikiname krastine aplink faiala -->
+<!-- su frameborder panaikiname krastine aplink faila -->
 <!-- stilizuoti galime tik vidiniame-child faile, tėviniame faile neveiks -->
 <iframe src="child.html" frameborder></iframe>
 
