--- a/2024-01-16_box-shadow_custom-fonts_dropdown-nav_rem-em_transition_viewport/dropdown-nav/dropdown-nav.html
+++ b/2024-01-16_box-shadow_custom-fonts_dropdown-nav_rem-em_transition_viewport/dropdown-nav/dropdown-nav.html
@@ -59,8 +59,8 @@
       display: block;
       /* nenustumia teksto apacion, jis lipa ant virsaus */
       position: absolute;
-      background-color: white;
-      width: 300px;
+      background-color: rgb(47, 205, 237);
+      width: 200px;
     }
 
 
@@ -74,7 +74,7 @@
     }
 
     li ul a:hover {
-      background-color: white;
+      background-color: rgba(255, 255, 255, 0.903);
       color: black;
       text-decoration: underline;
     }
@@ -89,7 +89,7 @@
         <li><a href="#">Drabužiai moterims</a>
           <ul>
             <li>
-              <a href="#">Megstiniai</a>
+              <a href="#">Megztiniai</a>
               <a href="#">D=insai</a>
               <a href="#">Kelnes</a>
               <a href="#">Striukes</a>
