--- a/2024-01-16_box-shadow_custom-fonts_dropdown-nav_rem-em_transition_viewport/rem-em/rem-em.html
+++ b/2024-01-16_box-shadow_custom-fonts_dropdown-nav_rem-em_transition_viewport/rem-em/rem-em.html
@@ -9,10 +9,10 @@
     html {
       font-size: 20px;
       /* tada 1rem tampa 20px */
-      /* patogu, jei pereiname5 mobili1 versiją ir pakeičiam tik vieną dydį - pasikeičia visur */
+      /* patogu, jei pereiname į mobilią versiją ir pakeičiame tik vieną dydį - pasikeičia visur */
     }
 
-    /* standartinis 6rifto dysis yra 16px */
+    /* standartinis šrifto dysis yra 16px */
     /* 1rem = 16px */
     .box {
       /* 20rem = 320px */
@@ -53,6 +53,7 @@
   <div class="parent">
     <div class="em-box purple"></div>
   </div>
+
 </body>
 
 </html>
