--- a/2024-01-16_box-shadow_custom-fonts_dropdown-nav_rem-em_transition_viewport/viewport-width-heith/viewport.html
+++ b/2024-01-16_box-shadow_custom-fonts_dropdown-nav_rem-em_transition_viewport/viewport-width-heith/viewport.html
@@ -14,7 +14,7 @@
     .full-box {
       width: 100%;
 
-      /* heith = 0, jei t4vinis elementas neturi auk62io */
+      /* heith = 0, jei tėvinis elementas neturi aukščio */
       /* height: 100%; */
 
       /* viewport heith */
@@ -43,7 +43,7 @@
     }
 
     .row {
-      /* vw - eilut4 per vis1 nar6ykl4s plotį */
+      /* vw - eilutė per visą naršyklės plotį */
       width: 100vw;
       height: 10px;
       text-emphasis-position: 10px;
