--- a/2024-01-17_css-variables_flex_iframe_video/video/video.html
+++ b/2024-01-17_css-variables_flex_iframe_video/video/video.html
@@ -10,7 +10,7 @@
 <body>
   <!-- autoplay - failas pasileidžia automatiškai -->
   <!-- loop - begalinis video kartojimas, sukasi vis iš naujo -->
-  <!-- controls - galime kontroliuoti rokymą - yra slankmatis apačioje
+  <!-- controls - galime kontroliuoti rodymą - yra slankmatis apačioje
   vartotojo sąsajoje atsiranda kontroliavimo panelė (play, stop, skip ir t.t.) -->
   <video autoplay loop controls>
     <!-- galime nurodyti kelis skirtingus failus, 
