--- a/2024-01-16_box-shadow_custom-fonts_dropdown-nav_rem-em_transition_viewport/transition/transitions.html
+++ b/2024-01-16_box-shadow_custom-fonts_dropdown-nav_rem-em_transition_viewport/transition/transitions.html
@@ -11,14 +11,16 @@
     }
 
     .button {
+      width: 200px;
+      margin: 0 auto;
       background-color: black;
       color: white;
       display: block;
       padding: 10px 20px;
       border-radius: 3px;
       text-decoration: none;
-      /* 1s ž 1000ms */
-      /* pusė sekundės ž 0.5s arba 500ms */
+      /* 1s = 1000ms */
+      /* pusė sekundės = 0.5s arba 500ms */
       /* 1- savybė, kurią norime animuoti; 2- animacijos trukmė; 3 - animacijos tipas - pasibandyti */
       transition: background-color 500ms ease;
     }
@@ -52,7 +54,7 @@
       background-color: orange;
     }
 
-    /* neb8tinai turi b8ti nuoroda, kad naudotume hover'į */
+    /* nebūtinai turi būti nuoroda, kad naudotume hover'į */
     .box:hover {
       background-color: red;
       width: 500px;
