--- a/2024-01-09_forms_input/forms/forms.html
+++ b/2024-01-09_forms_input/forms/forms.html
@@ -22,11 +22,11 @@
       background-color: azure;
     }
 
-    /* selektorius skirtas norint i6filtruoti element1 pagal atribut1 ir jo reik6m3 */
+    /* selektorius skirtas norint išfiltruoti elementą pagal atributą ir jo reikšmę */
     input[type="checkbox"] {
       width: unset;
       display: inline;
-      /* checkbox radio kvadratėlių neišeis labai stilizuoti, minimliai, jie generuojami automatiškai */
+      /* checkbox radio kvadratėlių neišeis labai stilizuoti, minimaliai, jie generuojami automatiškai */
     }
 
     input[type="radio"] {
