--- a/2024-01-10_icons/images/images.html
+++ b/2024-01-10_icons/images/images.html
@@ -7,15 +7,15 @@
   <title>Images</title>
 
   <style>
-    img {}
+    /* img {} */
 
     .purple {
       background-color: purple;
     }
 
-    svg path {
+    /* svg path {
       fill: ;
-    }
+    } */
 
     .contact {
       width: 500px;
