--- a/2024-01-10_icons/pseudo-elements.html/pseudo-elemments.html
+++ b/2024-01-10_icons/pseudo-elements.html/pseudo-elemments.html
@@ -7,7 +7,7 @@
   <title>Pseudo elements</title>
   <style>
     h1::before {
-      /* content b8rinai turi buri "" */
+      /* content būtinai turi buri "" */
       /* gali buti ir kitu savybiu, ne tik content */
       content: "Antraštė: ";
       background-color: tomato;
