--- a/2024-01-11_positions/fixed.html
+++ b/2024-01-11_positions/fixed.html
@@ -19,14 +19,14 @@
       /* top: 0;
       left: 0; */
 
-      /* jei nurodom top ar kit reiksme - el. praranda ploti per visa ekrana, todel reikia nurodyti width:100% */
+      /* jei nurodom top ar kita reiksme - el. praranda ploti per visa ekrana, todel reikia nurodyti width:100% */
       width: 100%;
 
       /* dabar uzlipa geltonas el. ant raudono apacioje, tada galiu naudoti z-index */
       bottom: 0;
       left: 0;
 
-      /* nurodoome, kaip tas elementas gali buti pozicionuojamas kitu elementu atzvilgiu */
+      /* nurodome, kaip tas elementas gali buti pozicionuojamas kitų elementu atzvilgiu */
       /* relative, absolute, fixed pozicijas turintys elementai įgauna galimybę turėti nurodomą z-index savybę. ji nurodo elemento prioritetą kitų atžvilgiu */
       z-index: 1;
     }
