--- a/2024-01-11_positions/positions.html
+++ b/2024-01-11_positions/positions.html
@@ -30,7 +30,7 @@
     .absolute {
       position: absolute;
       /* atsiranda galimybė nurodyti dar 4 savybes */
-      /* visada prioritetas bus duodamas top ir left reikšmėms. jos visada ims vir67*/
+      /* visada prioritetas bus duodamas top ir left reikšmėms. jos visada ims viršų*/
       /* top: 50;
       left: 180;
       right: 0;
@@ -51,7 +51,7 @@
       right: 50px;
     }
 
-    /* yra daug skirtingų būdų, tai vienasa pvz */
+    /* yra daug skirtingų būdų, tai vienas pvz */
     .hidden-corner {
       /* į kairę pusę galime slėpti elementą */
       top: -50px;
@@ -85,7 +85,7 @@
 
 
 
-    .large box {}
+    /* .large-box {} */
 
     span {
       font-size: 80px;
