--- a/2024-01-12_border-radius_borders_favicon_opacity/border-radius/border-radius.html
+++ b/2024-01-12_border-radius_borders_favicon_opacity/border-radius/border-radius.html
@@ -53,7 +53,7 @@
       width: 400px;
       height: 400px;
 
-      /* tod4l naudojame 50% !!!!! - liks visada apskritimas */
+      /* todėl naudojame 50% !!!!! - liks visada apskritimas */
       border-radius: 50%;
     }
   </style>
