--- a/2024-01-12_border-radius_borders_favicon_opacity/opacity/opacity.html
+++ b/2024-01-12_border-radius_borders_favicon_opacity/opacity/opacity.html
@@ -31,7 +31,7 @@
       background-color: orange;
     }
 
-    /* permatomumas - nuroromas viso elemento permatomumas */
+    /* permatomumas - nurodomas viso elemento permatomumas */
     .opacity {
       opacity: 0.5;
     }
