--- a/2024-02-12-Objektai-DOM/DOM.html
+++ b/2024-02-12-Objektai-DOM/DOM.html
@@ -26,7 +26,7 @@
       <div class="container">
         <ul>
           <li>Pirmas</li>
-          <li>ANtras</li>
+          <li>Antras</li>
           <li>Trecias</li>
         </ul>
         <ul>
@@ -71,7 +71,7 @@
 
       // console.log(document.getElementById('tekstas').);
 
-      //TEKSTO, ESANCIO ELEMENTE, PAEMIMAS NAUDOJANT getElementBbyId() metoda
+      //TEKSTO, ESANCIO ELEMENTE, PAEMIMAS NAUDOJANT getElementById() metoda
 
       // console.log(getElementById('tekstas').textContent);
 
@@ -107,7 +107,7 @@
       // document.querySelector('div.container').innerHTML = '<h1>Hello World</h1>';
 
 
-      // JEI RASAU += TAI PRIDEDU, TURINIOO PAPILDYMAS
+      // JEI RASAU += TAI PRIDEDU, TURINIO PAPILDYMAS
       document.querySelector('div.container').innerHTML += '<h1>Hello World</h1>';
 
       const words = ['Titulinis', 'Apie mus', 'Kontaktai', 'Istorija', 'Nuorodos']
