--- a/2024-02-12-Objektai-DOM/uzduotys/task-card.html
+++ b/2024-02-12-Objektai-DOM/uzduotys/task-card.html
@@ -7,10 +7,14 @@
   <title>Document</title>
   <script src="task-card.js" defer></script>
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500" rel="stylesheet">
+
   <style>
     body {
       box-sizing: border-box;
-      margin: 0 auto;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+
       font-family: 'Poppins', sans-serif;
       font-family: 'Source Code Pro', monospace;
     }
@@ -34,6 +38,7 @@
       margin: 0 auto;
       border-radius: 0.75rem;
       box-shadow: 0 22px 70px 4px rgba(0, 0, 0, 0.56), 0 0 0 1px rgba(0, 0, 0, 0.3);
+      /* transition: all 0.3s ease-in-out; */
       background-color: black;
       /* padding: 0 10px 0 10px; */
       padding-left: 20px;
@@ -78,7 +83,7 @@
     .container:hover {
       transform: scale(1.05);
       box-shadow: 0 32px 80px 14px rgba(0, 0, 0, 0.36), 0 0 0 1px rgba(0, 0, 0, 0.3);
-      transition: ease-in-out 0.5s;
+      transition: all ease-in-out 0.5s;
     }
   </style>
 </head>
