--- a/2024-02-12-Objektai-DOM/uzduotys/task2-2048.html
+++ b/2024-02-12-Objektai-DOM/uzduotys/task2-2048.html
@@ -34,7 +34,7 @@
       align-items: center;
       font-size: 48px;
       font-weight: 600;
-      color: ;
+      /* color: ; */
     }
 
     /* button {
